--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="Professor Reinaldo Oliveira">
+    <meta name="description" content="Aluno Luiz Guilherme">
     <meta name="keywords" content="marcelooliveira, professormarcelo, aedbresende, aedb, professor marcelo, marcelo391, marcelo_rde, marcelorde">
     <meta name="author" content="">
-    <title>Reinaldo de Oliveira</title>
+    <title>Luiz Guilherme</title>
    <!--  <link rel="shortcut icon" href="assets/img/favicon.ico"> -->
 
     <!-- build:css -->
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-md-8">
-				<h1 class="brand-heading">REINALDO OLIVEIRA</h1>
+				<h1 class="brand-heading">LUIZ GUILHERME</h1>
 				<p class="intro-text">
 					<!-- Analista de BI e Professor de Programação 
 					🎓 Developer • Teacher • IT Professional 🎓-->
@@ -66,7 +66,7 @@
 		<div class="col-md-8">
             <h2 class="d-block">SOBRE MIM</h2>
 			<p>
-				Professor de Geografia e Programação com foco no desenvolvimento de sistemas, docência e experiência em gestão de equipes.  Agora com um novo desafio: Trabalhar com Business Intelligence e Big Data
+				Estudante de pensamento computacional com foco no desenvolvimento de sistemas, docência e experiência em gestão de equipes.  Agora com um novo desafio: Trabalhar com Business Intelligence e Big Data
 			</p>
 			<p>
 				<a href="https://www.linkedin.com/in/reynaldo-oliveira-8a424487" target="_blank" class="btnghost"><i class="fa fa-linkedin"></i> MEU LINKEDIN</a>
