--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="col-md-8">
             <h2 class="d-block">SOBRE MIM</h2>
 			<p>
-				Estudante de pensamento computacional com foco no desenvolvimento de sistemas, docência e experiência em gestão de equipes.  Agora com um novo desafio: Trabalhar com Business Intelligence e Big Data
+				Estudante de pensamento computacional com foco no desenvolvimento de sistemas. Agora com um novo desafio: Trabalhar com Business Intelligence e Big Data
 			</p>
 			<p>
 				<a href="https://www.linkedin.com/in/reynaldo-oliveira-8a424487" target="_blank" class="btnghost"><i class="fa fa-linkedin"></i> MEU LINKEDIN</a>
