--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				Estudante de pensamento computacional com foco no desenvolvimento de sistemas. Agora com um novo desafio: Trabalhar com Business Intelligence e Big Data
 			</p>
 			<p>
-				<a href="https://www.linkedin.com/in/reynaldo-oliveira-8a424487" target="_blank" class="btnghost"><i class="fa fa-linkedin"></i> MEU LINKEDIN</a>
-				<a href="http://www.youtube.com/@EST%C3%81GIO_PROBAT%C3%93RIO" target="_blank" class="btnghost"><i class="fa fa-youtube"></i> MEU YOUTUBE</a>
-				<a href="https://github.com/ReinaldoOliveiraaa" target="_blank" class="btnghost"><i class="fa fa-github"></i> MEU GITHUB</a>
+				<a href="https://https://www.linkedin.com/feed/" target="_blank" class="btnghost"><i class="fa fa-linkedin"></i> MEU LINKEDIN</a>
+				<a href="http://https://www.youtube.com/" target="_blank" class="btnghost"><i class="fa fa-youtube"></i> MEU YOUTUBE</a>
+				<a href="https://https://github.com/" target="_blank" class="btnghost"><i class="fa fa-github"></i> MEU GITHUB</a>
 			</p>
 		</div>
 	</div>
