--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 				Estudante de pensamento computacional com foco no desenvolvimento de sistemas. Agora com um novo desafio: Trabalhar com Business Intelligence e Big Data
 			</p>
 			<p>
-				<a href="https://https://https://www.linkedin.com/in/romao-machado-5aa2b9333/" target="_blank" class="btnghost"><i class="fa fa-linkedin"></i> MEU LINKEDIN</a>
-				<a href="http://https://https://www.youtube.com/channel/UCZ8XbHmPj77HyS_Dt6uCoSg" target="_blank" class="btnghost"><i class="fa fa-youtube"></i> MEU YOUTUBE</a>
-				<a href="https://https://https://github.com/redninja015" target="_blank" class="btnghost"><i class="fa fa-github"></i> MEU GITHUB</a>
+				<a href="https://www.linkedin.com/in/romao-machado-5aa2b9333/" target="_blank" class="btnghost"><i class="fa fa-linkedin"></i> MEU LINKEDIN</a>
+				<a href="http://www.youtube.com/channel/UCZ8XbHmPj77HyS_Dt6uCoSg" target="_blank" class="btnghost"><i class="fa fa-youtube"></i> MEU YOUTUBE</a>
+				<a href="https://github.com/redninja015" target="_blank" class="btnghost"><i class="fa fa-github"></i> MEU GITHUB</a>
 			</p>
 		</div>
 	</div>
